[metadata]
name = zfs_uploader
version = attr: zfs_uploader.__version__
author = David Debeau
author_email = ddebeau@gmail.com
description = ZFS snapshot to S3 uploader.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ddebeau/zfs_uploader
project_urls =
    Bug Tracker = https://github.com/ddebeau/zfs_uploader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
install_requires =
    apscheduler>=3.6.3
    boto3>=1.16.20
    click>=7.0
packages = zfs_uploader
python_requires = >=3.6

[options.entry_points]
console_scripts =
    zfsup = zfs_uploader.__main__
